--- a/TypeScriptUnitTest/package.json
+++ b/TypeScriptUnitTest/package.json
@@ -12,7 +12,7 @@
     "@types/chai": "4.2.4",
     "chai": "4.2.0",
     "mocha": "6.2.2",
-    "nyc": "14.1.1",
+    "nyc": "15.0.0-beta.1",
     "source-map-support": "0.5.13"
   },
   "nyc": {
