--- a/TypeScriptUnitTest/package.json
+++ b/TypeScriptUnitTest/package.json
@@ -17,6 +17,7 @@
   },
   "nyc": {
     "all": true,
+    "cwd": "../Application",
     "exclude": [
       "**/index.ts",
       "**/*.d.ts",
@@ -33,6 +34,6 @@
     "temp-dir": "../TypeScriptUnitTest/.nyc_output"
   },
   "scripts": {
-    "test": "nyc --cwd ../Application mocha -r ts-node/register -r source-map-support/register **/*.spec.ts"
+    "test": "nyc mocha -r ts-node/register -r source-map-support/register **/*.spec.ts"
   }
 }
